2003-04-06  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: move extract_blank_at_begin() to ...

	* libutil++/string_manip.cpp: ... here, and rename as
	ws_prefix().
	
2003-04-06  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: prefix comment lines.
	Output the general footer on each separate file.
	Output the info at the bottom when outputting
	separate files (towards maintaining line numbering).

2003-04-06  John Levon  <levon@movementarian.org>

	* pp/op_to_source.cpp: construct a file-scope
	cmdline string, instead of passing it around.

2003-04-06  John Levon  <levon@movementarian.org>

	* libregex/op_regexp.cpp: re-arrange a bit

2003-04-06  John Levon  <levon@movementarian.org>

	* configure.in:
	* all Makefile.am: don't blindly set $LIBS, use
	explicit mention of which libs are needed.

	* dae/Makefile.am:
	* daemon/Makefile.am: only link with C++ if needed.

2003-04-05  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_config_24.h:
	* module/oprofile.c:
	* module/oprofile.c: make watermark size proportionnal to buffer size.

2003-04-05  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_events.h:
	* libop/op_events.c: re-add op_min_count();

	* dae/oprofiled.c:
	* daemon/oprofiled.c: use op_min_count() fixing #715923

2003-04-01  John Levon  <levon@movementarian.org>

	* libdb/Makefile.am: fix make dist

	* daemon/opd_cookie.h: add SPARC syscall number.
	  The system call function is OK for sparc/sparc64

2003-03-31  Will Cohen  <wcohen@redhat.com>

	* libdb/odb_hash.h: Renamed db_hash.h.

	* dae/Makefile.am:
	* dae/opd_image.c:
	* dae/opd_image.h:
	* dae/opd_proc.c:
	* dae/opd_sample_files.c:
	* daemon/Makefile.am:
	* daemon/opd_image.c:
	* daemon/opd_image.h:
	* daemon/opd_sample_files.c:
	* libabi/Makefile.am:
	* libabi/abi.cpp:
	* libabi/abi_test.cpp:
	* libabi/op_import.cpp:
	* libdb/Makefile.am:
	* libdb/db_debug.c:
	* libdb/db_hash.h:
	* libdb/db_insert.c:
	* libdb/db_manage.c:
	* libdb/db_stat.c:
	* libdb/db_test.c: